--- a/W4D3/css_warmup/css/01-header.css
+++ b/W4D3/css_warmup/css/01-header.css
@@ -1,18 +1,26 @@
 /* PHASE 1: Header */
 
 body {
-  /* Write your css here... */
-
+  font-family: sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  background-color: #eee;
 }
 
 .header {
-
+  background-color: #f00;
+  border-bottom: #ccc solid 1px;
+  color: white;
 }
 
 .header a {
-
+  display: block;
+  padding: 10px 20px;
 }
 
 .header-nav {
-
+  border-left: #ccc solid 1px;
+  border-right: #ccc solid 1px;
+  width: 900px;
+  margin: 0 auto;
 }
