--- a/W4D3/css_warmup/css/02-navigation.css
+++ b/W4D3/css_warmup/css/02-navigation.css
@@ -1,21 +1,25 @@
 /* PHASE 2: Navigation */
 
 .header-logo {
-
+  float: left;
+  font-weight: 700;
+  border-left: 1px solid #ccc;
 }
 
 .header-logo:hover {
-
+  background-color: black;
 }
 
 .header-list {
-
+  float: right;
 }
 
 .header-list > li {
-
+  float: left;
+  font-weight: 400;
+  border-left: 1px solid #ccc;
 }
 
 .header-list > li:hover {
-
+  background-color: black;
 }
