--- a/W4D3/css_warmup/css/03-content.css
+++ b/W4D3/css_warmup/css/03-content.css
@@ -1,19 +1,30 @@
 /* PHASE 3: Content */
 
 .content {
-
+  background-color: white;
+  border-bottom: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  border-left: 1px solid #ccc;
+  width: 900px;
+  margin: 0 auto;
 }
 
 .content-sidebar {
-
+  float: left;
+  width: 200px;
+  padding: 20px;
 }
 
 .content-main {
-
+  float: left;
+  width: 620px;
+  padding: 20px;
 }
 
 .content h1 {
-
+  font-size: 24px;
+  font-weight: 700;
+  margin: 0 0 20px 0;
 }
 
 .content p {
